--- a/web/css/nav.css
+++ b/web/css/nav.css
@@ -2,6 +2,9 @@
 h2 {
     padding-left: 30px;
     color: white;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
     background: steelblue;
 
 }
